# 3rd-sem-Operating-systems

./: .gitignore
lab 1/: CMakeLists.txt  creator.cpp  employee.h  main.cpp  reporter.cpp
lab 2/: CMakeLists.txt  main.cpp  main_pthread.cpp  main_std_thread.cpp
lab 3/: CMakeLists.txt  CmakeLists.txt  main_pthread  main_pthread.cpp  main_std_thread  main_std_thread.cpp
lab 4/: CMakeLists.txt  common.h  receiver.cpp  sender.cpp
lab 5/: CMakeLists.txt  client.cpp  common.h  server.cpp
